--- a/pom.xml
+++ b/pom.xml
@@ -42,17 +42,12 @@
             <artifactId>cucumber-java</artifactId>
             <version>7.14.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>1.2.6</version>
-            <type>pom</type>
+            <version>7.14.0</version>
             <scope>test</scope>
         </dependency>
-
-
-
-
     </dependencies>
 </project>
